--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   <div class="header">
     <h1>🕊️ KaDelivery is Dead</h1>
     <p>But the hunger still lives on in Kazbegi.</p>
-    <img class="gif" src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExZHAxMXhieDcyYmp3eXVzZ2V0ZDFsb2F0cDE3Mm8xcW4xOXRkbmd5MSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/6qFFgNgextP9u/giphy.gif" alt="Sad Crying GIF" />
+    <img class="gif" src="https://media0.giphy.com/media/6qFFgNgextP9u/giphy.gif" alt="Sad Crying GIF" />
   </div>
 
   <div class="container">
@@ -158,7 +158,6 @@
     Made with love, not venture capital.
   </div>
 
-
   <audio id="bg-music" src="1.mp3" loop></audio>
 
   <script>
@@ -172,5 +171,6 @@
       }
     });
   </script>
+
 </body>
 </html>
