--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
   <script>
     const audio = document.getElementById('bg-music');
-    let started = false;
+    let started = true;
 
     window.addEventListener('scroll', () => {
       if (!started) {
